nuget package tmp

--- a/sharp-reddit.csproj
+++ b/sharp-reddit.csproj
@@ -1,8 +1,10 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>SharpReddit</RootNamespace>
   </PropertyGroup>
-
+  <ItemGroup>
+    <Content Include="nuget.config" />
+  </ItemGroup>
 </Project>
